BM49: creating documentation for APIs customer management
